feat: create dockerfile for test server
