# cmd/main.go
@@ -1,7 +1,10 @@
 package main
 
 import (
+	"encoding/json"
+	"log"
 	"net/http"
+	"time"
 
 	"github.com/err/exampleApi/docs"
 	"github.com/gorilla/mux"
@@ -10,20 +13,36 @@ import (
 func main() {
 	docs.SwaggerInfo.Title = "Example API"
 	r := mux.NewRouter()
-	r.HandleFunc("/", handler)
+	r.HandleFunc("/health", handler)
 	r.HandleFunc("/balance", balanceHandler)
 	r.HandleFunc("/articles", handler)
-	http.Handle("/", r)
+
+	srv := &http.Server{
+		Handler: r,
+		Addr:    "0.0.0.0:8000",
+		// Good practice: enforce timeouts for servers you create!
+		WriteTimeout: 15 * time.Second,
+		ReadTimeout:  15 * time.Second,
+	}
+	println("Server started at port 8000")
+	log.Fatal(srv.ListenAndServe())
 }
 
-// @Summary Ping
-// @Description check connection
+// @Summary Transfers money between two user ids
+// @Description This endpoint transfers money between two user ids
 // @Produce  json
 // @Success 200
-// @Param name query string false "Account Id"
-// @Router /ping [get]
+// @Param fromUserId query string false "From user Id"
+// @Param toUserId query string false "To user Id"
+// @Param amount query string false "Amount to transfer"
+// @Router /transfer [get]
 func handler(w http.ResponseWriter, r *http.Request) {
 	w.Write([]byte("Gorilla!\n"))
+}
+
+type BalanceResponse struct {
+	Balance string `json:"balance"`
+	UserId  string `json:"userId"`
 }
 
 // @Summary Gets the balance of a user given an user id
@@ -33,5 +52,14 @@ func handler(w http.ResponseWriter, r *http.Request) {
 // @Param userId query string true "User id is the unique identitier of the user"
 // @Router /balance [get]
 func balanceHandler(w http.ResponseWriter, r *http.Request) {
-	w.Write([]byte("Gorilla!\n"))
+	userId := r.URL.Query().Get("userId")
+	balance := "100"
+	jsonResponse, err := json.Marshal(BalanceResponse{Balance: balance, UserId: userId})
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	w.Write(jsonResponse)
 }
